--- a/index.html
+++ b/index.html
@@ -63,8 +63,12 @@ RSS Feed: https://feeds.feedburner.com/Free-templateco
                 <a class="nav-link" href="about.html">About</a>
               </li>
             </ul> -->
-
+            <ul class="navbar-nav ml-auto pl-lg-5 pl-0">
+              <li class="nav-item"><a href="https://www.facebook.com/p.1.l.k.k" target="_blank" class="p-2 nav-link "><span class="fa fa-facebook"></span></a></li>
+              <li class="nav-item"><a href="#" class="p-2 nav-link"><span class="fa fa-instagram"></span></a></li>
+            </ul>
             <ul class="navbar-nav ml-auto">
+
               <li class="nav-item cta-btn">
                 <a class="nav-link" href="https://forms.gle/kZb9LGfMrGcyWuLq8" target="_blank">Contact Us</a>
               </li>
@@ -86,7 +90,7 @@ RSS Feed: https://feeds.feedburner.com/Free-templateco
             <div class="row slider-text align-items-center justify-content-center">
               <div class="col-md-8 text-center col-sm-12 ">
                 <h1 data-aos="fade-up">Reinventing Milk</h1>
-                <p class="mb-5" data-aos="fade-up" data-aos-delay="100">Plant based Milk, drink it in right way.</p>
+                <p class="mb-5" data-aos="fade-up" data-aos-delay="100">Plant based Milk, so you drink it in right way.</p>
                 <p data-aos="fade-up" data-aos-delay="200"><a href="https://forms.gle/TE5PrSEkd3v5XN6T7" target="_blank" class="btn btn-white btn-outline-white">Join the Pilk Movement</a></p>
               </div>
             </div>
@@ -489,7 +493,7 @@ RSS Feed: https://feeds.feedburner.com/Free-templateco
             <h3>About Us</h3>
             <p class="mb-5">We are a team of curated, passionate entreprenuers motivated to bring another revolution in the dairy industry.</p>
             <ul class="list-unstyled footer-link d-flex footer-social">
-              <li><a href="#" class="p-2"><span class="fa fa-facebook"></span></a></li>
+              <li><a href="https://www.facebook.com/p.1.l.k.k" target="_blank" class="p-2"><span class="fa fa-facebook"></span></a></li>
               <li><a href="#" class="p-2"><span class="fa fa-instagram"></span></a></li>
             </ul>
 
