added instagram link

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ RSS Feed: https://feeds.feedburner.com/Free-templateco
             </ul> -->
             <ul class="navbar-nav ml-auto pl-lg-5 pl-0">
               <li class="nav-item"><a href="https://www.facebook.com/p.1.l.k.k" target="_blank" class="p-2 nav-link "><span class="fa fa-facebook"></span></a></li>
-              <li class="nav-item"><a href="#" class="p-2 nav-link"><span class="fa fa-instagram"></span></a></li>
+              <li class="nav-item"><a href="https://www.instagram.com/thenameis_pilk/" target="_blank" class="p-2 nav-link"><span class="fa fa-instagram"></span></a></li>
             </ul>
             <ul class="navbar-nav ml-auto">
 
@@ -494,7 +494,7 @@ RSS Feed: https://feeds.feedburner.com/Free-templateco
             <p class="mb-5">We are a team of curated, passionate entreprenuers motivated to bring another revolution in the dairy industry.</p>
             <ul class="list-unstyled footer-link d-flex footer-social">
               <li><a href="https://www.facebook.com/p.1.l.k.k" target="_blank" class="p-2"><span class="fa fa-facebook"></span></a></li>
-              <li><a href="#" class="p-2"><span class="fa fa-instagram"></span></a></li>
+              <li><a href="https://www.instagram.com/thenameis_pilk/" target="_blank" class="p-2 nav-link"><span class="fa fa-instagram"></span></a></li>
             </ul>
 
           </div>
